[package]
name = "anno"
version = "0.2.0"
edition = "2021"
description = "Named Entity Recognition (NER) and Information Extraction library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arclabs561/anno"

[dependencies]
anno-core = { path = "../anno-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
bitflags = { workspace = true }

# CLI
clap = { workspace = true }
clap_complete = { workspace = true }
indicatif = { workspace = true }

# Evaluation
rand = { workspace = true }
ureq = { workspace = true }
sha2 = { workspace = true }
dirs = { workspace = true }

# ML
ort = { workspace = true }
tokenizers = { workspace = true }
hf-hub = { workspace = true }
ndarray = { workspace = true }
lru = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
safetensors = { workspace = true }

# Async
tokio = { workspace = true }
futures = { workspace = true }

# Utilities
itertools = { workspace = true }
smallvec = { workspace = true }
dashmap = { workspace = true }
unicode-normalization = { workspace = true }
rusqlite = { version = "0.37", features = ["bundled"] }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = []
discourse = []
