[package]
name = "anno-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Unified CLI for the anno toolbox"
publish = false  # Binary-only crate, not published to crates.io

[features]
default = ["eval-advanced"]
eval = ["anno/eval", "dirs"]
eval-advanced = ["eval", "anno/eval-advanced"]
discourse = ["anno/discourse"]
onnx = ["anno/onnx"]
candle = ["anno/candle"]
eval-bias = ["anno/eval-bias"]
instrument = ["anno/instrument", "tracing-subscriber"]

[dependencies]
anno = { path = "../anno", features = ["cli", "eval"], default-features = false }
# NOTE: anno-core is used for types that flow through anno's API
anno-core = { path = "../anno-core" }

# CLI
clap = { workspace = true }
clap_complete = { workspace = true }
is-terminal = { workspace = true }
glob = { workspace = true }
indicatif = { workspace = true }
toml = { workspace = true }

# Utilities
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true, optional = true }

# Observability (optional)
tracing-subscriber = { workspace = true, optional = true }

[[bin]]
name = "anno"
path = "src/main.rs"

[lints]
workspace = true

