[package]
name = "anno-cli"
version = { workspace = true }
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arclabs561/anno"
description = "CLI for anno: extract entities, coreference chains, relations, and PII from text, HTML, and URLs"
publish = false

[dependencies]
anno = { path = "../anno", package = "anno-lib", version = "0.4.0", default-features = false }
anno-eval = { path = "../anno-eval", version = "0.4.0" }
anno-core = { path = "../anno-core", version = "0.4.0" }

clap = { workspace = true, features = ["derive", "env", "wrap_help"] }
clap_complete = { workspace = true }
indicatif = { workspace = true }
is-terminal = { workspace = true }
toml = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
log = { workspace = true }
tracing-subscriber = { workspace = true }
ureq = { workspace = true, features = ["json"] }
chrono = { workspace = true }
dirs = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
glob = { workspace = true }
itertools = { workspace = true }

# Optional: only used by the `anno sampler` / `anno muxer` DX tooling (behind `eval`).
muxer = { version = "0.4", default-features = false, features = ["serde", "stochastic", "contextual"], optional = true }

# Optional: graph/KG export surface.
# anno-graph is the graph/KG adapter crate; it brings in lattix transitively.
anno-graph = { path = "../anno-graph", version = "0.4.0", optional = true }
lattix = { version = "0.5.4", optional = true }

# Document-to-text extraction (HTML stripping, readability, PDF).
deformat = { workspace = true, features = ["readability"] }
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
rayon = { workspace = true }

[features]
default = ["onnx"]
# Evaluation + muxer tooling.
eval = ["dep:muxer", "anno/analysis", "anno-eval/eval"]
eval-bias = ["eval", "anno-eval/eval-bias"]
discourse = ["anno/discourse", "anno-eval/discourse"]
instrument = []
onnx = ["anno/onnx", "anno-eval/onnx"]
candle = ["anno/candle"]
llm = ["anno/llm"]
bundled-crf-weights = ["anno/bundled-crf-weights"]
bundled-hmm-params = ["anno/bundled-hmm-params"]
graph = ["dep:anno-graph", "dep:lattix"]
pdf = ["deformat/pdf"]

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "anno"
path = "src/main.rs"

