[package]
name = "anno-coalesce"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Cross-document entity coalescing - merge mentions into canonical entities"
publish = false  # Publishing disabled

[dependencies]
anno-core = { path = "../anno-core" }
textprep = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true

