[package]
name = "anno-core"
version = "0.3.4"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arclabs561/anno"
description = "Core types and invariants for anno"
keywords = ["ner", "nlp", "coreference", "types"]
categories = ["text-processing"]

publish = true

[dependencies]
textprep = { workspace = true }
sketchir = { workspace = true }
clump = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
bitflags = { workspace = true }
itertools = { workspace = true }
smallvec = { workspace = true }
dashmap = { workspace = true }
unicode-normalization = { workspace = true }
schemars = { version = "0.8", features = ["derive"], optional = true }

[dev-dependencies]
proptest = { workspace = true }

[features]
default = []
schema = ["dep:schemars"]

