[package]
name = "anno-core"
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arclabs561/anno"
description = "Core types and invariants for anno: entities, spans, confidence scores, coreference chains"
keywords = ["ner", "nlp", "coreference", "types"]
categories = ["text-processing"]


[dependencies]
textprep = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
log = { workspace = true }
schemars = { version = "0.8", features = ["derive"], optional = true }

[dev-dependencies]
proptest = { workspace = true }

[features]
default = []
schema = ["dep:schemars"]
