[package]
name = "anno-core"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = "https://docs.rs/anno-core"
description = "Core types and invariants for anno: entities, spans, confidence scores, coreference chains"
keywords = ["ner", "nlp", "coreference", "types"]
categories = ["text-processing"]
readme = "README.md"


[dependencies]
textprep = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
schemars = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
proptest = { workspace = true }

[features]
default = []
schema = ["dep:schemars"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
