[package]
name = "anno-corpus-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Shared corpus identity and scoping domain types for Anno."

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
