[package]
name = "anno-corpus-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "SQLite corpus registry for Anno local MCP scoping."

[dependencies]
anno-corpus-core = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
