[package]
name = "anno-eval"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arclabs561/anno"
description = "Evaluation harnesses, datasets, and muxer-backed sampling for anno"
publish = false

[lib]
doctest = false

[[bin]]
name = "muxer_repeat"
path = "src/bin/muxer_repeat.rs"
required-features = ["eval"]

[[bin]]
name = "muxer_audit"
path = "src/bin/muxer_audit.rs"

[dependencies]
anno = { path = "../anno", package = "anno-lib", version = "0.2.0", default-features = false, features = ["analysis"] }
anno-core = { path = "../anno-core", version = "0.2.0" }
anno-metrics = { path = "../anno-metrics", version = "0.2.0" }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
bitflags = { workspace = true }
textprep = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }
ureq = { workspace = true, features = ["json"] }
rusqlite = { workspace = true }
sha2 = { workspace = true }
glob = { workspace = true }
clump = { workspace = true }
unicode-normalization = { workspace = true }
rayon = { workspace = true, optional = true }

muxer = { git = "https://github.com/arclabs561/muxer.git", rev = "d48477d", default-features = false, features = ["serde", "stochastic", "contextual"], optional = true }
hf-hub = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = "3"

[features]
default = []
parallel = ["dep:rayon"]
discourse = ["anno/discourse"]
# Muxer-backed evaluation harnesses + sampling tooling.
eval = ["dep:muxer"]
eval-profiling = []
eval-bias = []
eval-parallel = ["parallel"]
onnx = ["anno/onnx", "hf-hub"]
candle = ["anno/candle"]
burn = ["anno/burn"]
llm = ["anno/llm"]
rank-eval = []
hf-hub = ["dep:hf-hub"]

# Pass-through feature gates for bundled classical assets.
bundled-crf-weights = ["anno/bundled-crf-weights"]
bundled-hmm-params = ["anno/bundled-hmm-params"]
