[package]
name = "anno-eval"
version = { workspace = true }
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arclabs561/anno"
description = "Evaluation harnesses, datasets, and muxer-backed sampling for anno"
publish = false

[lib]
doctest = false

[[bin]]
name = "muxer_repeat"
path = "src/bin/muxer_repeat.rs"
required-features = ["eval"]

[[bin]]
name = "muxer_audit"
path = "src/bin/muxer_audit.rs"

[[example]]
name = "muxer_decision_loop"
path = "examples/muxer_decision_loop.rs"
required-features = ["eval"]

[[example]]
name = "cache_warm"
path = "examples/cache_warm.rs"
required-features = ["eval"]

[[example]]
name = "cdcr_eval"
path = "examples/cdcr_eval.rs"
required-features = ["eval"]

[dependencies]
anno = { path = "../anno", package = "anno-lib", version = "0.5.0", default-features = false, features = [
  "analysis",
] }
anno-core = { path = "../anno-core", version = "0.5.0" }
anno-metrics = { path = "../anno-metrics", version = "0.5.0" }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
bitflags = { workspace = true }
textprep = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }
ureq = { workspace = true, features = ["json"] }
rusqlite = { workspace = true }
sha2 = { workspace = true }
glob = { workspace = true }
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = "0.37"
clump = { workspace = true }
unicode-normalization = { workspace = true }
rayon = { workspace = true, optional = true }

muxer = { version = "0.4", default-features = false, features = [
  "serde",
  "stochastic",
  "contextual",
], optional = true }
hf-hub = { workspace = true, optional = true }
candle-core = { workspace = true, optional = true }
candle-nn = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = "3"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[features]
default = []
parallel = ["dep:rayon"]
# Muxer-backed evaluation harnesses + sampling tooling.
# Pulls in bundled trained weights so classical backends use real parameters, not heuristics.
eval = ["dep:muxer", "bundled-crf-weights", "bundled-hmm-params"]
discourse = ["anno/discourse"]
eval-profiling = []
eval-bias = []
eval-parallel = ["parallel"]
onnx = ["anno/onnx", "hf-hub"]
candle = ["anno/candle", "dep:candle-core", "dep:candle-nn"]
llm = ["anno/llm"]
hf-hub = ["dep:hf-hub"]

# Pass-through feature gates for bundled classical assets.
bundled-crf-weights = ["anno/bundled-crf-weights"]
bundled-hmm-params = ["anno/bundled-hmm-params"]
