[package]
name = "anno-graph"
version = { workspace = true }
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arclabs561/anno"
description = "Graph/KG export adapters for anno: converts extraction output to lattix::KnowledgeGraph and N-Triples"
publish = false

[dependencies]
anno-core = { path = "../anno-core", version = "0.6.0" }
# crates.io `lattix` currently requires its default feature set enabled.
lattix = { version = "0.5.4" }
serde_json.workspace = true
