[package]
name = "anno-graph"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = "https://docs.rs/anno-graph"
description = "Graph/KG export adapters for anno: converts extraction output to lattix::KnowledgeGraph and N-Triples"
keywords = ["ner", "knowledge-graph", "nlp"]
categories = ["text-processing"]

[dependencies]
anno-core = { path = "../anno-core", version = "0.7.0" }
# crates.io `lattix` currently requires its default feature set enabled.
lattix = { version = "0.6" }
serde_json.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
