[package]
name = "anno-knowledge-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Source-neutral knowledge domain types for Anno local knowledge indexing."

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
