[package]
name = "anno-knowledge-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "SQLite control and FTS store for Anno local knowledge indexing."

[dependencies]
anno-knowledge-core = { path = "../anno-knowledge-core" }
chrono = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3.27.0"

[lints]
workspace = true
