[package]
name = "anno-lattix"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arclabs561/anno"
description = "Adapters between anno-core and lattix graph substrates"
publish = false

[dependencies]
anno-core = { path = "../anno-core", version = "0.2.0" }
lattix = { path = "../../../lattix/lattix", default-features = false }

