[package]
name = "anno-lattix"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arclabs561/anno"
description = "Adapters between anno-core and lattix graph substrates"
publish = false

[dependencies]
anno-core = { path = "../anno-core", version = "0.2.0" }
# crates.io `lattix` expects its default feature set to be enabled to pull in optional deps.
lattix = { version = "0.1.1" }

