[package]
name = "anno-metrics"
version = "0.3.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arclabs561/anno"
description = "Shared evaluation/analysis primitives for anno (metrics + cluster encoders)"
publish = true

[dependencies]
anno-core = { path = "../anno-core", version = "0.3.1" }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
proptest = { workspace = true }

