[package]
name = "anno-privacy-gateway"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Anthropic-compatible privacy gateway for Cowork and provider routing"

[[bin]]
name = "anno-privacy-gateway"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
cloakpipe-core = { path = "../../vendor/cloakpipe/crates/cloakpipe-core" }
reqwest = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
