[package]
name = "anno-privacy-gateway"
version = "0.3.0"
edition.workspace    = true
rust-version.workspace = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true
homepage.workspace   = true
description = "Anthropic-compatible privacy gateway for Cowork and provider routing"

[[bin]]
name = "anno-privacy-gateway"
path = "src/main.rs"

[dependencies]
async-stream = { workspace = true }
axum = { workspace = true }
bytes = { workspace = true }
cloakpipe-core = { path = "../../vendor/cloakpipe/crates/cloakpipe-core" }
csv = "1"
futures-util = { workspace = true }
hex = "0.4"
hmac = "0.12"
reqwest = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
subtle = "2"
thiserror = { workspace = true }
time = { version = "0.3", features = ["formatting", "macros"] }
tokio = { workspace = true }
tower = "0.5"
tower-http = { version = "0.6", features = ["auth"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true

[package.metadata.dist]
dist = true

[package.metadata.wix]
upgrade-guid = "FD222F89-2E11-44C8-ADCD-DA4D39E2DB0D"
path-guid = "35703D6A-11A0-4545-8663-137CA0BA264B"
license = false
eula = false
