[package]
name              = "anno-rag-bin"
version           = "0.11.0-rc.16"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
homepage.workspace     = true
description       = "anno-rag CLI binary — splits out so anno-rag-mcp can depend on anno-rag without a cycle."

[features]
default = []
gpu-metal = ["anno-rag/gpu-metal", "anno-rag-mcp/gpu-metal"]
gpu-cuda = ["anno-rag/gpu-cuda", "anno-rag-mcp/gpu-cuda"]
embedded-ocr = ["anno-rag/embedded-ocr", "anno-rag-mcp/embedded-ocr"]
rerank = ["anno-rag/rerank", "anno-rag-mcp/rerank"]

[[bin]]
name = "anno-rag"
path = "src/main.rs"

[dependencies]
anno-rag         = { path = "../anno-rag" }
anno-rag-mcp     = { path = "../anno-rag-mcp" }
anno-rag-tabular = { path = "../anno-rag-tabular" }

async-trait     = "0.1"
clap            = { workspace = true }
chrono          = { workspace = true }
lancedb         = { workspace = true }
tokio           = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow          = { workspace = true }
serde_json      = { workspace = true }
uuid            = { workspace = true }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true

[package.metadata.dist]
dist = true

[package.metadata.wix]
upgrade-guid = "6DE17528-E63A-4AE3-806F-CBCFECD4524F"
path-guid = "5971D5CA-864C-4CD8-910E-983882553F7C"
license = false
eula = false
