[package]
name         = "anno-rag-mcp"
version      = "0.1.0"
edition.workspace      = true
rust-version.workspace = true
license      = "MIT OR Apache-2.0"
description  = "MCP (stdio) server exposing anno-rag's retrieval surface + (Phase 8) anno-rag-tabular's review tools."

[dependencies]
anno-rag        = { path = "../anno-rag" }
# anno-rag-tabular will be added in Phase 8 T33 — leave out for this refactor.

rmcp            = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
tokio           = { workspace = true }
tracing         = { workspace = true }
chrono          = { workspace = true }
schemars        = { workspace = true }
uuid            = { workspace = true }

[lints]
workspace = true
