[package]
name = "anno-rag-setup"
version.workspace = true
edition.workspace = true
description = "Anno-RAG Tauri setup assistant — one-click installer for lawyers"
license = "Apache-2.0"

[features]
default = ["anno-rag/default"]
gpu-coreml = ["anno-rag/gpu-coreml"]
gpu-directml = ["anno-rag/gpu-directml"]
gpu-cuda = ["anno-rag/gpu-cuda"]
gpu-metal = ["anno-rag/gpu-metal"]

[dependencies]
anno-rag = { path = "../anno-rag", default-features = false }
tauri = { version = "2", features = ["protocol-asset"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[[bin]]
name = "anno-rag-setup"
path = "src/main.rs"
