[package]
name = "anno-rag-setup"
version = "0.14.1"
edition = "2021"
description = "Anno-RAG Tauri setup assistant — one-click installer for lawyers"
license = "Apache-2.0"

[features]
default = []
gpu-coreml = ["anno-rag/gpu-coreml"]
gpu-directml = ["anno-rag/gpu-directml"]
gpu-cuda = ["anno-rag/gpu-cuda"]
gpu-metal = ["anno-rag/gpu-metal"]

[dependencies]
anno-rag = { path = "../anno-rag", default-features = false }
# Pin biblib to 0.4.2 -- 0.4.4+ requires quick-xml 0.39+ API (decode_and_unescape_value).
# This crate is excluded from the workspace so the workspace-level pin doesn't apply here.
biblib = "=0.4.2"
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
dirs = "5"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[[bin]]
name = "anno-rag-setup"
path = "src/main.rs"
